--- a/somerandomdude/stylesheets/css/global.css
+++ b/somerandomdude/stylesheets/css/global.css
@@ -14,7 +14,8 @@ body {
     display: block;
     width: 100px;
     height: 20px;
-    background: url("../../images/sprite.png") -180px -370px no-repeat;
+    background: url("/wp-content/themes/somerandomdude/images/webbynode.png?embed=true") no-repeat;
+    /*@include sprite-background(-180px, -370px);*/
     text-indent: -99999px; }
 
 .fss {
