--- a/somerandomdude/stylesheets/css/footer.css
+++ b/somerandomdude/stylesheets/css/footer.css
@@ -42,7 +42,8 @@
     #text-10 #footer_main_promo .sprite.fork {
       width: 131px;
       height: 150px;
-      background: url("../../images/sprite.png") 0px -240px no-repeat;
+      background: url("/wp-content/themes/somerandomdude/images/fork.png?embed=true") no-repeat;
+      /*@include sprite-background(0px, -240px);*/
       float: left;
       margin-left: 15px; }
     #text-10 #footer_main_promo .content {
