--- a/somerandomdude/stylesheets/scss/pages.scss
+++ b/somerandomdude/stylesheets/scss/pages.scss
@@ -1,7 +1,8 @@
 @import "variables";
 
-#content.page article h1 {
-	display: none; }
+#content.page article header {
+	display:none;
+}
 
 #page_title {
 	@include font-size-xx-large();
