--- a/frank/stylesheets/scss/single.scss
+++ b/frank/stylesheets/scss/single.scss
@@ -19,7 +19,9 @@
 			width: 45px;
 			height: 45px;
 			border-radius: 22.5px;
-			text-indent: -9999px;
+			text-indent: 100%;
+			white-space: nowrap;
+			overflow: hidden;
 			background: $color_midtone url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAQCAYAAADESFVDAAAAWElEQVR42qXSzQkAIAgF4EZolEZqhDZqpEZwBM8dovSUYD9YwuNdPgIlt5tWa6AA9wkgpXPfACeagaeAAGkFigDZACbKAoAC+5f+od7Oesh/iC+/QC/DPQAIxvkuqJQtLgAAAABJRU5ErkJggg==') no-repeat 16px 15px;
 		}
 		a:hover {
