--- a/somerandomdude/stylesheets/css/global.css
+++ b/somerandomdude/stylesheets/css/global.css
@@ -15,8 +15,9 @@ body {
     width: 100px;
     height: 20px;
     background: url("/wp-content/themes/somerandomdude/images/webbynode.png?embed=true") no-repeat;
-    /*@include sprite-background(-180px, -370px);*/
-    text-indent: -99999px; }
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden; }
 
 .fss {
   position: relative; }
