More tweaks to HTML and CSS
Refinements to CSS rules and removal of unnecessary HTML tags/attributes

--- a/frank/stylesheets/css/header.css
+++ b/frank/stylesheets/css/header.css
@@ -7,21 +7,21 @@
     font-size: 20px; }
   #page_header nav .menu ul {
     list-style: none; }
-    #page_header nav .menu ul ul {
-      display: none; }
-    #page_header nav .menu ul li {
-      float: left; }
-      #page_header nav .menu ul li a {
-        display: block;
-        height: 15px;
-        color: #050000;
-        font: 11px/14px "Helvetica Neue", Helvetica, Arial, sans-serif; }
-      #page_header nav .menu ul li a:hover {
-        color: #5d504f; }
-    #page_header nav .menu ul li:first-child {
-      margin-left: 0; }
-    #page_header nav .menu ul li.last {
-      margin-right: 0; }
+  #page_header nav .menu ul ul {
+    display: none; }
+  #page_header nav .menu li {
+    float: left; }
+    #page_header nav .menu li a {
+      display: block;
+      height: 15px;
+      color: #050000;
+      font: 11px/14px "Helvetica Neue", Helvetica, Arial, sans-serif; }
+    #page_header nav .menu li a:hover {
+      color: #5d504f; }
+  #page_header nav .menu li:first-child {
+    margin-left: 0; }
+  #page_header nav .menu li.last {
+    margin-right: 0; }
 
 #sub_header {
   border-bottom: 2px solid #f0eceb;
