--- a/somerandomdude/stylesheets/css/header.css
+++ b/somerandomdude/stylesheets/css/header.css
@@ -16,52 +16,49 @@
   margin-top: 8px;
   float: right;
   position: relative; }
-  #page_header nav .menu {
+  #page_header nav #menu-primary {
+    float: right;
+    list-style: none;
     margin: 0;
-    padding: 0; }
-    #page_header nav .menu ul {
-      float: right;
-      list-style: none;
+    padding: 0;
+    display: block;
+    position: relative; }
+    #page_header nav #menu-primary li {
       margin: 0;
       padding: 0;
-      display: block;
-      position: relative; }
-      #page_header nav .menu ul li {
-        margin: 0;
-        padding: 0;
-        margin-right: 40px;
-        float: left;
-        background: none; }
-        #page_header nav .menu ul li a {
-          display: block;
-          font-weight: 700;
-          height: 15px;
-          color: #5d504f;
-          font-size: 11px;
-          padding: 0; }
-        #page_header nav .menu ul li a:hover {
-          color: #050000; }
-      #page_header nav .menu ul li:last-child {
-        margin-right: 0; }
-      #page_header nav .menu ul li.rss, #page_header nav .menu ul li.twitter {
-        position: fixed;
-        margin-left: 140px; }
-        #page_header nav .menu ul li.rss a, #page_header nav .menu ul li.twitter a {
-          width: 45px;
-          height: 45px;
-          border-radius: 22.5px;
-          display: block;
-          text-indent: 100%;
-          white-space: nowrap;
-          overflow: hidden;
-          box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3); }
-      #page_header nav .menu ul li.rss {
-        margin-top: -15px; }
-        #page_header nav .menu ul li.rss a {
-          background: #ea0000 url("/wp-content/themes/somerandomdude/images/rss.png?embed=true") no-repeat center center; }
-      #page_header nav .menu ul li.twitter {
-        margin-top: 50px; }
-        #page_header nav .menu ul li.twitter a {
-          background: #ea0000 url("/wp-content/themes/somerandomdude/images/twitter.png?embed=true") no-repeat center center; }
-      #page_header nav .menu ul li.rss a:hover, #page_header nav .menu ul li.twitter a:hover {
-        background-color: #ff1e00; }
+      margin-right: 40px;
+      float: left;
+      background: none; }
+      #page_header nav #menu-primary li a {
+        display: block;
+        font-weight: 700;
+        height: 15px;
+        color: #5d504f;
+        font-size: 11px;
+        padding: 0; }
+      #page_header nav #menu-primary li a:hover {
+        color: #050000; }
+    #page_header nav #menu-primary li:last-child, #page_header nav #menu-primary li.last {
+      margin-right: 0; }
+    #page_header nav #menu-primary li.rss, #page_header nav #menu-primary li.twitter {
+      position: fixed;
+      margin-left: 140px; }
+      #page_header nav #menu-primary li.rss a, #page_header nav #menu-primary li.twitter a {
+        width: 45px;
+        height: 45px;
+        border-radius: 22.5px;
+        display: block;
+        text-indent: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3); }
+    #page_header nav #menu-primary li.rss {
+      margin-top: -15px; }
+      #page_header nav #menu-primary li.rss a {
+        background: #ea0000 url("/wp-content/themes/somerandomdude/images/rss.png?embed=true") no-repeat center center; }
+    #page_header nav #menu-primary li.twitter {
+      margin-top: 50px; }
+      #page_header nav #menu-primary li.twitter a {
+        background: #ea0000 url("/wp-content/themes/somerandomdude/images/twitter.png?embed=true") no-repeat center center; }
+    #page_header nav #menu-primary li.rss a:hover, #page_header nav #menu-primary li.twitter a:hover {
+      background-color: #ff1e00; }
